Popravljen grid in fonti

--- a/index.html
+++ b/index.html
@@ -57,10 +57,11 @@
         <section class="section home" data-anchor="domov-stran">
           <div class="showcase">
 
-            <h2>REŠITVE<br> &nbsp&nbsp&nbspWEBSO</h2>
+            <h2>REŠITVE<br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbspWEBSO</h2>
 
             <img src="./img/triglav-svg.svg" alt="triglav">
             <div class="pike">
+              <span class="homedot"></span>
               <span class="homedot"></span>
               <span class="homedot"></span>
               <span class="homedot"></span>
@@ -97,6 +98,8 @@
               <span class="homedot"></span>
               <span class="homedot"></span>
               <span class="homedot"></span>
+              <span class="homedot"></span>
+              <span class="homedot"></span>
               
             </div>
           </div>
@@ -119,6 +122,7 @@
               <span class="homedot"></span>
               <span class="homedot"></span>
               <span class="homedot"></span>
+              <span class="homedot"></span>
 
             </div>
             <p>Od designa do<br>vaše spletne strani.</p>
@@ -128,9 +132,11 @@
         <section class="section contact" data-anchor="kontakt-stran">
           <div class="kontakt">
 
-            <h2>Kontaktiraj<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspnas!</h2>
+            <h2>Stopimo v<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspstik.</h2>
 
             <div class="pike">
+              <span class="homedot"></span>
+              <span class="homedot"></span>
               <span class="homedot"></span>
               <span class="homedot"></span>
               <span class="homedot"></span>
