--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
+  <script src="https://kit.fontawesome.com/7fff0a11af.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Russo+One&family=Titillium+Web&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="./fullpage.css" />
@@ -21,10 +22,18 @@
         <h1 id="logo1">Webso</h1>
 
         <ul>
+          <div>
+            <input type="checkbox" class="checkbox" id="chk" />
+            <label class="label" for="chk">
+              <i class="fas fa-sun"></i>
+              <i class="fas fa-moon"></i>
+              <div class="ball"></div>
+            </label>
+          </div>
           <li><a href="./">
               
             </a></li>
-          <li><a href="https://www.linkedin.com/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.linkedin.com/"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
           <li><a href="#kontakt-stran">KONTAKT</a></li>
           <li>
             <div class="menu-btn">
