za silo kontaktna forma

--- a/index.html
+++ b/index.html
@@ -157,7 +157,50 @@
             </div>
 
             <p>resitve.webso@gmail.com</p>
-            
+            <div class="kontaktcontainer">
+              <div class="row100">
+                <div class="col">
+                  <div class="inputBox">
+                    
+                    <input type="text" name="" required="required">
+                    <span class= "text">Ime in priimek</span>
+                    <span class= "line"></span>
+                  </div>
+                </div>
+              </div>
+              <div class="row100">
+                <div class="col">
+                  <div class="inputBox">
+                    <input type="text" name="" required="required">
+                    <span class= "text">Email</span>
+                    <span class= "line"></span>
+                  </div>
+                </div>
+              </div>
+              <div class="row100">
+                <div class="col">
+                  <div class="inputBox">
+                    <input type="text" name="" required="required">
+                    <span class= "text">Tel</span>
+                    <span class= "line"></span>
+                  </div>
+                </div>
+              </div>
+              <div class="row100">
+                <div class="col">
+                  <div class="inputBox textarea">
+                    <textarea required="required"></textarea>
+                    <span class= "text">Kratko sporočilo</span>
+                    <span class= "line"></span>
+                  </div>
+                </div>
+              </div>
+              <div class="row100">
+                <div class="col">
+                  <input type="submit" value="Pošlji">
+                </div>
+              </div>
+            </div>
           </div>
           <p class="sectionname contactname">KONTAKT</p>
         </section>
