dnevni burger menu

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
             <p>Vaša želja,<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspnaš izziv.</p>
           </div>
-          <p class="sectionname homename">SCROLLDOWN</p>
+          <p class="sectionname homename">POSKROLAJ</p>
 
         </section>
         <section class="section projects" data-anchor="projekti-stran">
