--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
   <script src="https://kit.fontawesome.com/7fff0a11af.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Russo+One&family=Titillium+Web&display=swap" rel="stylesheet">
 
@@ -157,6 +156,7 @@
             </div>
 
             <p>resitve.webso@gmail.com</p>
+            
             <div class="kontaktcontainer">
               <div class="row100">
                 <div class="col">
@@ -195,7 +195,7 @@
                 <div class="col">
                   <div class="inputBox textarea">
                     <textarea required="required"></textarea>
-                    <span class="text">Kratko sporočilo</span>
+                    <span class="text">Kratko sporočilo kaj vas zanima.</span>
                     <span class="line"></span>
                   </div>
                 </div>
