--- a/index.html
+++ b/index.html
@@ -162,14 +162,14 @@
                 <div class="col">
                   <div class="inputBox">
                     <input type="text" name="" required="required">
-                    <span class="text">Ime</span>
+                    <span class="text">Ime:</span>
                     <span class="line"></span>
                   </div>
                 </div>
                 <div class="col">
                   <div class="inputBox">
                     <input type="text" name="" required="required">
-                    <span class="text">Priimek</span>
+                    <span class="text">Priimek:</span>
                     <span class="line"></span>
                   </div>
                 </div>
@@ -178,14 +178,14 @@
                 <div class="col">
                   <div class="inputBox">
                     <input type="text" name="" required="required">
-                    <span class="text">Email</span>
+                    <span class="text">Email:</span>
                     <span class="line"></span>
                   </div>
                 </div>
                 <div class="col">
                   <div class="inputBox">
                     <input type="text" name="" required="required">
-                    <span class="text">Mobilni telefon</span>
+                    <span class="text">Mobilni telefon:</span>
                     <span class="line"></span>
                   </div>
                 </div>
@@ -195,7 +195,7 @@
                 <div class="col">
                   <div class="inputBox textarea">
                     <textarea required="required"></textarea>
-                    <span class="text">Kratko sporočilo kaj vas zanima.</span>
+                    <span class="text sporocilo">Kratko sporočilo:</span>
                     <span class="line"></span>
                   </div>
                 </div>
