--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
             <p>resitve.webso@gmail.com</p>
             
-            <div class="kontaktcontainer">
+            <form class="kontaktcontainer">
               <div class="row100">
                 <div class="col">
                   <div class="inputBox">
@@ -205,7 +205,7 @@
                   <input type="submit" value="Pošlji">
                 </div>
               </div>
-            </div>
+            </form>
           </div>
           <p class="sectionname contactname">KONTAKT</p>
         </section>
