--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
             <p>resitve.webso@gmail.com</p>
             
-            <form class="kontaktcontainer">
+            <form class="kontaktcontainer" action="POST" data-netlify="true"> 
               <div class="row100">
                 <div class="col">
                   <div class="inputBox">
