forma ime polji

--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@
               <div class="row100">
                 <div class="col">
                   <div class="inputBox">
-                    <input type="text" name="name" required="required">
+                    <input type="text" name="Ime:" required="required">
                     <span class="text">Ime:</span>
                     <span class="line"></span>
                   </div>
                 </div>
                 <div class="col">
                   <div class="inputBox">
-                    <input type="text" name="lastname" required="required">
+                    <input type="text" name="Priimek:" required="required">
                     <span class="text">Priimek:</span>
                     <span class="line"></span>
                   </div>
@@ -177,14 +177,14 @@
               <div class="row100">
                 <div class="col">
                   <div class="inputBox">
-                    <input type="text" name="email" required="required">
+                    <input type="text" name="Email:" required="required">
                     <span class="text">Email:</span>
                     <span class="line"></span>
                   </div>
                 </div>
                 <div class="col">
                   <div class="inputBox">
-                    <input type="text" name="tel" required="required">
+                    <input type="text" name="Tel:" required="required">
                     <span class="text">Mobilni telefon:</span>
                     <span class="line"></span>
                   </div>
@@ -194,7 +194,7 @@
               <div class="row100">
                 <div class="col">
                   <div class="inputBox textarea">
-                    <textarea required="required"></textarea>
+                    <textarea required="required" name="Sporočilo"></textarea>
                     <span class="text sporocilo">Kratko sporočilo:</span>
                     <span class="line"></span>
                   </div>
