--- a/index.html
+++ b/index.html
@@ -81,7 +81,16 @@
                 &nbsp&nbsp&nbsp&nbsp&nbsp&nbspWEBSO
               </h2>
 
-              <img src="./img/triglav-svg.svg" alt="triglav" />
+              <div id="paralax-container" class="paralax-container">
+                <div id="paralax-scene" class="paralax-scene">
+                  
+                  <div class="triglav-paralax" data-depth="1.40"><img src="./img/zvezde.svg"></div>
+                  <div class="triglav-paralax" data-depth="0.90"><img src="./img/luna.svg"></div>
+                  <div class="triglav-paralax" data-depth="1.00"><img src="./img/triglav.svg"></div>
+                  <div class="triglav-paralax" data-depth="0.85"><img src="./img/gore1.svg"></div>
+                  <div class="triglav-paralax" data-depth="0.95"><img src="./img/gore2.svg"></div>
+                </div>
+              </div>
               <div class="pike">
                 <span class="homedot"></span>
                 <span class="homedot"></span>
@@ -237,6 +246,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="./fullpage.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
