--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <title>Webso</title>
   </head>
-  
+
   <body>
     <header>
       <div class="nav-container">
@@ -83,14 +83,40 @@
 
               <div id="paralax-container" class="paralax-container">
                 <div id="paralax-scene" class="paralax-scene">
-                  
-                  <div class="triglav-paralax" data-depth="1.40"><img src="./img/zvezde.svg"></div>
-                  <div class="triglav-paralax" data-depth="0.90"><img src="./img/luna.svg"></div>
-                  <div class="triglav-paralax" data-depth="1.00"><img src="./img/triglav.svg"></div>
-                  <div class="triglav-paralax" data-depth="0.85"><img src="./img/gore1.svg"></div>
-                  <div class="triglav-paralax" data-depth="0.95"><img src="./img/gore2.svg"></div>
+                  <div data-depth="1.40">
+                    <img class="noc" src="./img/zvezde.svg" />
+                  </div>
+                  <div data-depth="0.90">
+                    <img class="noc" src="./img/luna.svg" />
+                  </div>
+                  <div data-depth="1.00">
+                    <img class="noc" src="./img/triglav.svg" />
+                  </div>
+                  <div data-depth="0.85">
+                    <img class="noc" src="./img/gore1.svg" />
+                  </div>
+                  <div data-depth="0.95">
+                    <img class="noc" src="./img/gore2.svg" />
+                  </div>
+                  <div data-depth="1.0">
+                    <img class="dan" src="./img/ozadje.svg" />
+                  </div>
+                  <div data-depth="0.90">
+                    <img class="dan" src="./img/sonce.svg" />
+                  </div>
+                  <div data-depth="1.00">
+                    <img class="dan" src="./img/triglav_day.svg" />
+                  </div>
+                  <div data-depth="0.85">
+                    <img class="dan" src="./img/gore1_day.svg" />
+                  </div>
+                  <div data-depth="0.95">
+                    <img class="dan" src="./img/gore2_day.svg" />
+                  </div>
                 </div>
               </div>
+              
+
               <div class="pike">
                 <span class="homedot"></span>
                 <span class="homedot"></span>
