paralax_day/night

--- a/index.html
+++ b/index.html
@@ -101,9 +101,13 @@
                   <div data-depth="1.0">
                     <img class="dan" src="./img/ozadje.svg" />
                   </div>
-                  <div data-depth="0.90">
-                    <img class="dan" src="./img/sonce.svg" />
+                  <div data-depth="1.25">
+                    <img class="dan" src="./img/oblak7.svg" />
                   </div>
+                  <div data-depth="1.1">
+                    <img class="dan" src="./img/oblak6.svg" />
+                  </div>
+
                   <div data-depth="1.00">
                     <img class="dan" src="./img/triglav_day.svg" />
                   </div>
@@ -112,6 +116,21 @@
                   </div>
                   <div data-depth="0.95">
                     <img class="dan" src="./img/gore2_day.svg" />
+                  </div>
+                  <div data-depth="0.7">
+                    <img class="dan" src="./img/oblak4.svg" />
+                  </div>
+                  <div data-depth="0.9">
+                    <img class="dan" src="./img/oblak3.svg" />
+                  </div>
+                  <div data-depth="0.90">
+                    <img class="dan" src="./img/sonce.svg" />
+                  </div>
+                  <div data-depth="-0.3">
+                    <img class="dan" src="./img/oblak2.svg" />
+                  </div>
+                  <div data-depth="0.85">
+                    <img class="dan" src="./img/oblak1.svg" />
                   </div>
                 </div>
               </div>
