dodana sekcija o nas

--- a/index.html
+++ b/index.html
@@ -124,7 +124,6 @@
                 <span class="homedot"></span>
                 <span class="homedot"></span>
                 <span class="homedot"></span>
-                
               </div>
 
               <div class="container-projekti">
@@ -144,8 +143,6 @@
                   <div class="proSlide pikSlika">
                     <div class="st-projekta">03</div>
                   </div>
-
-
                 </div>
 
                 <div class="nazaj-naprej">
@@ -154,16 +151,17 @@
               </div>
 
               <div class="opisi-projektov">
-
                 <div class="pro1">
-
                   <h4>Oak N' Eagle</h4>
                   <p>Zasnova in izdelava spletne strani s spletno trgovino.</p>
 
                   <div class="orodja"></div>
 
-                  <a onclick=" window.open('https://www.oakneagle.com','_blank')" class="button">Obišči stran</a>
-
+                  <a
+                    onclick=" window.open('https://www.oakneagle.com','_blank')"
+                    class="button"
+                    >Obišči stran</a
+                  >
                 </div>
                 <div class="pro1">
                   <h4>AndrazTech</h4>
@@ -171,8 +169,11 @@
 
                   <div class="orodja"></div>
 
-                  <a onclick=" window.open('https://www.andraztech.si','_blank')" class="button">Obišči stran</a>
-
+                  <a
+                    onclick=" window.open('https://www.andraztech.si','_blank')"
+                    class="button"
+                    >Obišči stran</a
+                  >
                 </div>
                 <div class="pro1">
                   <h4>Piknik prostor Ločice</h4>
@@ -180,8 +181,11 @@
 
                   <div class="orodja"></div>
 
-                  <a onclick=" window.open('https://www.piknikprostorlocice.si','_blank')" class="button">Obišči stran</a>
-
+                  <a
+                    onclick=" window.open('https://www.piknikprostorlocice.si','_blank')"
+                    class="button"
+                    >Obišči stran</a
+                  >
                 </div>
               </div>
             </div>
@@ -204,14 +208,47 @@
                 <span class="homedot"></span>
                 <span class="homedot"></span>
               </div>
-              <p>Od designa do<br />vaše spletne strani.</p>
+              <p>Od dizajna do<br />&nbsp&nbsp&nbsp&nbspvaše spletne strani.</p>
+
+              <div class="onas__card onas__card__jure">
+                <div class="onas__card__slika onas__card__slika--jure"></div>
+
+                <div class="onas__card__ime onas__card__ime--jure">Jure</div>
+              </div>
+
+              <div class="onas__card onas__card__gregor">
+                <div class="onas__card__slika onas__card__slika--gregor"></div>
+                <div class="onas__card__ime onas__card__ime--gregor">
+                  Gregor
+                </div>
+              </div>
+
+              <div class="onas__opis onas__opis--jure">
+                <div class="onas__opis__besedilo">
+                  <div class="onas__opis__besedilo__intro">
+                    <p>Sem</p>
+                    <p class="typing"></p>
+                  </div>
+                  
+                </div>
+              </div>
+
+              <div class="onas__opis onas__opis--gregor">
+                <div class="onas__opis__besedilo">
+                  <div class="onas__opis__besedilo__intro">
+                    <p>Sem</p>
+                    <p class="typing1"></p>
+                  </div>
+                </div>
+              </div>
             </div>
             <p class="sectionname aboutname">O NAS</p>
           </section>
+
           <section class="section contact" data-anchor="kontakt-stran">
             <div class="kontakt">
               <h2>
-                Stopimo v<br />&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspstik.
+                Stopimo v<br />&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspstik.
               </h2>
 
               <div class="pike">
