dnevni nočni paralax dela kot mora

--- a/index.html
+++ b/index.html
@@ -84,52 +84,83 @@
               <div id="paralax-container" class="paralax-container">
                 <div id="paralax-scene" class="paralax-scene">
                   <div data-depth="1.40">
-                    <img class="noc" src="./img/zvezde.svg" />
+                    <img src="./img/zvezde.svg" />
                   </div>
                   <div data-depth="0.90">
-                    <img class="noc" src="./img/luna.svg" />
+                    <img src="./img/luna.svg" />
                   </div>
                   <div data-depth="1.00">
-                    <img class="noc" src="./img/triglav.svg" />
+                    <img src="./img/triglav.svg" />
                   </div>
                   <div data-depth="0.85">
-                    <img class="noc" src="./img/gore1.svg" />
+                    <img src="./img/gore1.svg" />
                   </div>
                   <div data-depth="0.95">
-                    <img class="noc" src="./img/gore2.svg" />
+                    <img src="./img/gore2.svg" />
                   </div>
+                  <!--dnevna tema
                   <div data-depth="1.0">
-                    <img class="dan" src="./img/ozadje.svg" />
+                    <img  src="./img/ozadje.svg" />
                   </div>
                   <div data-depth="1.25">
-                    <img class="dan" src="./img/oblak7.svg" />
+                    <img  src="./img/oblak7.svg" />
                   </div>
                   <div data-depth="1.1">
-                    <img class="dan" src="./img/oblak6.svg" />
+                    <img  src="./img/oblak6.svg" />
                   </div>
 
                   <div data-depth="1.00">
-                    <img class="dan" src="./img/triglav_day.svg" />
+                    <img src="./img/triglav_day.svg" />
                   </div>
                   <div data-depth="0.85">
-                    <img class="dan" src="./img/gore1_day.svg" />
+                    <img  src="./img/gore1_day.svg" />
                   </div>
                   <div data-depth="0.95">
-                    <img class="dan" src="./img/gore2_day.svg" />
+                    <img  src="./img/gore2_day.svg" />
                   </div>
                   <div data-depth="0.7">
-                    <img class="dan" src="./img/oblak4.svg" />
+                    <img  src="./img/oblak4.svg" />
                   </div>
                   <div data-depth="0.90">
-                    <img class="dan" src="./img/sonce.svg" />
+                    <img  src="./img/sonce.svg" />
                   </div>
                   <div data-depth="-0.3">
-                    <img class="dan" src="./img/oblak2.svg" />
+                    <img  src="./img/oblak2.svg" />
+                  </div>
+                --></div>
+              </div>
+              <div id="paralax-container-2" class="paralax-container-2">
+                <div id="paralax-scene-2" class="paralax-scene-2">
+                  <div data-depth="1.0">
+                    <img  src="./img/ozadje.svg" />
+                  </div>
+                  <div data-depth="1.25">
+                    <img  src="./img/oblak7.svg" />
+                  </div>
+                  <div data-depth="1.1">
+                    <img  src="./img/oblak6.svg" />
+                  </div>
+
+                  <div data-depth="1.00">
+                    <img src="./img/triglav_day.svg" />
+                  </div>
+                  <div data-depth="0.85">
+                    <img  src="./img/gore1_day.svg" />
+                  </div>
+                  <div data-depth="0.95">
+                    <img  src="./img/gore2_day.svg" />
+                  </div>
+                  <div data-depth="0.7">
+                    <img  src="./img/oblak4.svg" />
+                  </div>
+                  <div data-depth="0.90">
+                    <img  src="./img/sonce.svg" />
+                  </div>
+                  <div data-depth="-0.3">
+                    <img  src="./img/oblak2.svg" />
                   </div>
                 </div>
               </div>
-              
-
               <div class="pike">
                 <span class="homedot"></span>
                 <span class="homedot"></span>
