--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
               <p>resitve.webso@gmail.com</p>
 
-              <form class="kontaktcontainer" action="POST" data-netlify="true">
+              <form class="kontaktcontainer" action="POST" data-netlify="true" data-netlify-recaptcha="true">
                 <div class="row100">
                   <div class="col">
                     <div class="inputBox">
@@ -210,6 +210,11 @@
                       <span class="text sporocilo">Kratko sporočilo:</span>
                       <span class="line"></span>
                     </div>
+                  </div>
+                </div>
+                <div class="row100">
+                  <div class="col">
+                    <div data-netlify-recaptcha="true"></div>
                   </div>
                 </div>
                 <div class="row100">
