manjši popravki fonta

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="showcase">
               <h2>
                 REŠITVE<br />
-                &nbsp&nbsp&nbsp&nbsp&nbsp&nbspWEBSO
+                <span>WEBSO</span>
               </h2>
 
               <div id="paralax-container" class="paralax-container">
@@ -147,8 +147,8 @@
                 
               </div>
               <p>
-                Vaša želja,<br />&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspnaš
-                izziv.
+                Vaša želja,<br /><span>naš
+                izziv.</span>
               </p>
             </div>
             <p class="sectionname homename">POSKROLAJ</p>
@@ -157,11 +157,10 @@
             <div class="pro">
               <h2>
                 Naši <br />
-                &nbsp&nbsp&nbsp&nbspProjekti
+                <span>Projekti</span>
               </h2>
 
               <div class="pike">
-                <span class="homedot"></span>
                 <span class="homedot"></span>
                 <span class="homedot"></span>
                 <span class="homedot"></span>
@@ -297,7 +296,7 @@
           <section class="section contact" data-anchor="kontakt-stran">
             <div class="kontakt">
               <h2>
-                Stopimo v<br />&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspstik.
+                Stopimo v<br /><span>stik.</span>
               </h2>
 
               <div class="pike">
