home + kontak za tablice

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 ><i class="fab fa-linkedin" aria-hidden="true"></i
               ></a>
             </li>
-            <li><a href="#kontakt-stran">KONTAKT</a></li>
+            <li class="menu-kontakt"><a href="#kontakt-stran">KONTAKT</a></li>
             <li>
               <div class="menu-btn">
                 <div class="menu-btn__burger"></div>
@@ -296,7 +296,7 @@
           <section class="section contact" data-anchor="kontakt-stran">
             <div class="kontakt">
               <h2>
-                Stopimo v<br /><span>stik.</span>
+                Stopimo v <span>stik.</span>
               </h2>
 
               <div class="pike">
@@ -310,7 +310,7 @@
                 
               </div>
 
-              <p>resitve.webso@gmail.com</p>
+              <p><i class="fas fa-envelope"></i>resitve.webso@gmail.com</p>
 
               <form class="kontaktcontainer" action="POST" data-netlify="true" netlify-honeypot="bot-field">
                 <div class="row100">
