--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               </label>
             </div>
             <li><a href="./"> </a></li>
-            <li>
+            <li class="menu-linkedin">
               <a href="https://www.linkedin.com/"
                 ><i class="fab fa-linkedin" aria-hidden="true"></i
               ></a>
