--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <h1 id="logo1">Webso</h1>
 
           <ul>
-            <div>
+            <div class="day_night_container">
               <input type="checkbox" class="checkbox" id="chk" />
               <label class="label" for="chk">
                 <i class="fas fa-sun"></i>
