--- a/index.html
+++ b/index.html
@@ -302,7 +302,13 @@
                 <span class="homedot"></span>
               </div>
 
-              <p><i class="fas fa-envelope"></i>resitve.webso@gmail.com</p>
+              <p class="besedilo">Pošljite nam sporočilo ali nas kontaktirajte preko  LinkedIn-a.</p>
+
+              <ul>
+                <li><p><i class="fas fa-envelope"></i>resitve.webso@gmail.com</p></li>
+              <li><p><i class="fab fa-linkedin"></i>resitve.webso</p></li>
+              </ul>
+              
 
               <form
                 class="kontaktcontainer"
