--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <section class="section projects" data-anchor="projekti-stran">
             <div class="pro">
               <h2>
-                Naši <br />
+                Naši
                 <span>Projekti</span>
               </h2>
 
