--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@
                 <span class="homedot"></span>
                 <span class="homedot"></span>
               </div>
-              <p>Od designa do<br />vaše spletne strani.</p>
+              <p>Naša ekipa trenutno šteje dva člana, ki uživata v procesu izdelave spletnih strani; vse od designa do končnega videza in optimizacije vaše spletne strani. </p>
+              
 
               <div class="onas__card onas__card__jure">
                 <div class="onas__card__slika onas__card__slika--jure"></div>
