--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"
+    />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <script
       src="https://kit.fontawesome.com/7fff0a11af.js"
@@ -253,8 +256,12 @@
                 <span class="homedot"></span>
                 <span class="homedot"></span>
               </div>
-              <p>Naša ekipa trenutno šteje dva člana, ki uživata v procesu izdelave spletnih strani; vse od designa do končnega videza in optimizacije vaše spletne strani. </p>
-              
+              <p class="opis">
+                Naša ekipa trenutno šteje dva člana, ki uživata v procesu
+                izdelave spletnih strani; vse od designa do končnega videza in
+                optimizacije na spletu. Zadovljstvo strank je pri nas na prvem
+                mestu, zato se vedno trudimo izpolniti vse želje in ideje.
+              </p>
 
               <div class="onas__card onas__card__jure">
                 <div class="onas__card__slika onas__card__slika--jure"></div>
@@ -303,13 +310,18 @@
                 <span class="homedot"></span>
               </div>
 
-              <p class="besedilo">Pošljite nam sporočilo ali nas kontaktirajte preko  LinkedIn-a.</p>
+              <p class="besedilo">
+                Pošljite nam sporočilo ali nas kontaktirajte preko LinkedIn-a.
+              </p>
 
               <ul>
-                <li><p><i class="fas fa-envelope"></i>resitve.webso@gmail.com</p></li>
-              <li><p><i class="fab fa-linkedin"></i>resitve.webso</p></li>
+                <li>
+                  <p><i class="fas fa-envelope"></i>resitve.webso@gmail.com</p>
+                </li>
+                <li>
+                  <p><i class="fab fa-linkedin"></i>resitve.webso</p>
+                </li>
               </ul>
-              
 
               <form
                 class="kontaktcontainer"
