--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     <header>
       <div class="nav-container">
         <nav>
-          <h1 id="logo1">Webso</h1>
+          <a href="/" title="Return to the homepage" class="logo-link">
+            <img id="logo1" src="/img/logo-koncan.svg" alt="Webso logo" />
+          </a>
 
           <ul>
             <div class="day_night_container">
