--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
     <script
       src="https://kit.fontawesome.com/7fff0a11af.js"
       crossorigin="anonymous"
@@ -2050,6 +2051,13 @@
         </g>
       </svg>
       
+    </div>
+    <div class="rotate">
+      <div class="phone">
+      </div>
+      <div class="message">
+        Prosim zasukajte telefon.
+      </div>
     </div>
     <header>
       <div class="nav-container">
