--- a/index.html
+++ b/index.html
@@ -2056,7 +2056,7 @@
       <div class="phone">
       </div>
       <div class="message">
-        Prosim zasukajte telefon.
+        Prosimo zasukajte telefon.
       </div>
     </div>
     <header>
