--- a/index.html
+++ b/index.html
@@ -2189,7 +2189,7 @@
               </div>
               <p>Vaša želja,<br /><span>naš izziv.</span></p>
             </div>
-            <p class="sectionname homename">POSKROLAJ</p>
+            <p class="sectionname homename">POSKROLAJ NAVZDOL</p>
           </section>
           <section class="section projects" data-anchor="projekti-stran">
             <div class="pro">
