--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 
     <link rel="stylesheet" href="./fullpage.css" />
     <link rel="stylesheet" href="./styles/style.css" />
+    
+    <link rel="icon" type="image/png" href="/img/logo16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="/img/logo32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/img/logo48x48.png" sizes="48x48">
+    <link rel="icon" type="image/png" href="/img/logo169x169.png" sizes="169x169">
     <title>Webso</title>
   </head>
 
