--- a/index.html
+++ b/index.html
@@ -2057,7 +2057,7 @@
       </svg>
       
     </div>
-    <div class="rotate">
+    <div class="rotate" id="rotate">
       <div class="phone">
       </div>
       <div class="message">
