--- a/index.html
+++ b/index.html
@@ -2347,6 +2347,7 @@
           <section class="section contact" data-anchor="kontakt-stran">
             <div class="kontakt">
               <h2>Stopimo v <span>stik.</span></h2>
+              <img src="./img/kontakt_webso.png" alt="agreement" class="kontakt-picture">
 
               <div class="pike">
                 <span class="homedot"></span>
