--- a/index.html
+++ b/index.html
@@ -2336,6 +2336,7 @@
                       <li><span class="type_gregor1"></span></li>
                       <li><span class="type_gregor2"></span></li>
                       <li><span class="type_gregor3"></span></li>
+                      <li><span class="type_gregor4"></span></li>
                     </ul>
                     
                   </div>
