prva verzija-pripravljam drug nacin

--- a/index.html
+++ b/index.html
@@ -2224,7 +2224,10 @@
                 </div>
 
                 <div class="projekt-slika">
+                  <div class="cover"></div>
+
                   <div class="proSlide oakSlika">
+                    
                     <div class="st-projekta">01</div>
                   </div>
 
@@ -2235,6 +2238,7 @@
                   <div class="proSlide pikSlika">
                     <div class="st-projekta">03</div>
                   </div>
+
                 </div>
 
                 <div class="nazaj-naprej">
