dodani linki in odstranjenih nekaj slik

--- a/index.html
+++ b/index.html
@@ -1040,7 +1040,7 @@
           <linearGradient id="linear-gradient-1003" x1="966.84" y1="319.89" x2="966.84" y2="550.77" xlink:href="#linear-gradient"/>
           <linearGradient id="linear-gradient-1007" x1="94.51" y1="599.38" x2="534.76" y2="599.38" xlink:href="#linear-gradient"/>
         </defs>
-        <title>logo-koncan</title>
+        <title>Webso-loading</title>
         <g>
           <g>
             <circle cx="41.03" cy="165.42" r="41.03" fill="url(#linear-gradient)"/>
@@ -2082,7 +2082,7 @@
             </div>
             <li><a href="./"> </a></li>
             <li class="menu-linkedin">
-              <a href="https://www.linkedin.com/"
+              <a href="https://www.linkedin.com/company/re%C5%A1itve-webso" target="_blank"
                 ><i class="fab fa-linkedin" aria-hidden="true"></i
               ></a>
             </li>
@@ -2365,10 +2365,10 @@
 
               <ul>
                 <li>
-                  <p><i class="fas fa-envelope"></i>resitve.webso@gmail.com</p>
+                  <a href="mailto:resitve.webso@gmail.com" target="_blank"><p><i class="fas fa-envelope"></i>resitve.webso@gmail.com</p></a>
                 </li>
                 <li>
-                  <p><i class="fab fa-linkedin"></i>resitve.webso</p>
+                  <a href="https://www.linkedin.com/company/re%C5%A1itve-webso" target="_blank"><p><i class="fab fa-linkedin"></i>Rešitve Webso</p></a>
                 </li>
               </ul>
 
