--- a/index.html
+++ b/index.html
@@ -2295,6 +2295,52 @@
               </div>
             </div>
 
+            <div class="slide">
+              <div class="pro">
+                <div class="projekt-slika-section">
+                  <div class="background-image-layout izlaboats-slika">
+
+                  </div>
+                </div>
+
+                <div class="opisi-projektov">
+                  <h4>Izla Boats</h4>
+                  <p>Morski vibe. Stran je pripravljena tako, da jo naročnik nadalje oblikuje po svojih željah.</p>
+
+                  <div class="orodja"></div>
+
+                  <a
+                    onclick=" window.open('https://www.izlaboats.eu','_blank')"
+                    class="button"
+                    >Obišči stran</a
+                  >
+                </div>
+              </div>
+            </div>
+
+            <div class="slide">
+              <div class="pro">
+                <div class="projekt-slika-section">
+                  <div class="background-image-layout creativeula-slika">
+
+                  </div>
+                </div>
+
+                <div class="opisi-projektov">
+                  <h4>Creativeula</h4>
+                  <p>Portfolio stran za nadarjeno mlado režiserko. Minimalizem, pastelne barve, izčiščenost.</p>
+
+                  <div class="orodja"></div>
+
+                  <a
+                    onclick=" window.open('https://www.creativeula.com','_blank')"
+                    class="button"
+                    >Obišči stran</a
+                  >
+                </div>
+              </div>
+            </div>
+
 
 
             <p class="sectionname projectname">PROJEKTI</p>
